5.1.3: Many music items may cause the overflow in the playlist (fixed)

--- a/src/styles/layouts/default.styl
+++ b/src/styles/layouts/default.styl
@@ -376,18 +376,32 @@ Y8P 888  888  888  "Y88888  88888P'  "Y8888          "Y88888 888    "Y888888  "Y
   888                    "Y88P"
   */
   .muse-drawer__playList {
-    width: 100%;
+    width: 98%;
     height: 95%;
+    overflow-y: scroll;
 
     display: inline-block;
 
     position: absolute;
-    left: calc(100% + 20px);
+    left: calc(100% + 24px);
+    
+    &::-webkit-scrollbar {
+      width: 5px;
+      margin-left: 5px;
+      background: rgba(0, 0, 0, .3);
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      width: 5px;
+      background: rgba(255, 255, 255, .8);
+    }
 
     .muse-playList__item {
       width: 100%;
       height: 40px;
       line-height: 40px;
+      
+      font-size: 14px;
 
       overflow: hidden;
       color: #fff;
